[ITB-1037] Prevent covering of arrow head.

--- a/gitb-ui/ui/src/styles/less/components/sequence-diagram.less
+++ b/gitb-ui/ui/src/styles/less/components/sequence-diagram.less
@@ -301,7 +301,7 @@
           display: inline-flex;
           background: @white;
           text-align: center;
-          padding: 0 8px;
+          margin: 0 13px;
 
           &.skipped {
             text-decoration: line-through;
